[gd_scene load_steps=10 format=3 uid="uid://dpeogmdal2gq"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_ucaxs"]
[ext_resource type="Script" path="res://scripts/ui/spell_grid.gd" id="2_4n2dm"]

[sub_resource type="Gradient" id="Gradient_d1vap"]
colors = PackedColorArray(0.470588, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_at4yi"]
gradient = SubResource("Gradient_d1vap")
width = 256
height = 20

[sub_resource type="Gradient" id="Gradient_l7lwg"]
colors = PackedColorArray(0, 0.470588, 0, 1, 0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8g3jh"]
gradient = SubResource("Gradient_l7lwg")
width = 256
height = 20

[sub_resource type="Gradient" id="Gradient_f01fd"]
colors = PackedColorArray(0, 0, 0.470588, 1, 0, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hcxxb"]
gradient = SubResource("Gradient_f01fd")
width = 256
height = 20

[sub_resource type="CanvasTexture" id="CanvasTexture_ah75y"]

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ucaxs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HPBar" type="TextureProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 2
value = 100.0
texture_progress = SubResource("GradientTexture2D_at4yi")

[node name="StaminaBar" type="TextureProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 2
value = 100.0
texture_progress = SubResource("GradientTexture2D_8g3jh")

[node name="ManaBar" type="TextureProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 2
value = 100.0
texture_progress = SubResource("GradientTexture2D_hcxxb")

[node name="SpellGrid" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -160.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("2_4n2dm")
meditate_cooldown = 1.0
meditate_mana_cost = 0.0
slot_size = 50

[node name="SpellSlot1" type="TextureRect" parent="SpellGrid"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("CanvasTexture_ah75y")

[node name="SpellSlot3" type="TextureRect" parent="SpellGrid"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("CanvasTexture_ah75y")

[node name="SpellSlot2" type="TextureRect" parent="SpellGrid"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("CanvasTexture_ah75y")

[node name="SpellSlot4" type="TextureRect" parent="SpellGrid"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("CanvasTexture_ah75y")
